fixed desktop bug on mobile for css

--- a/src/css/modals/modalContainerComp.css
+++ b/src/css/modals/modalContainerComp.css
@@ -16,7 +16,7 @@
     }
 
     .otherDesignsMobile{
-        min-width: 248px !important;
+        max-width: 270px !important;
     }
 }
 
